# claudecart

./: .gitignore  README.md  app.py  dev.sh  pyproject.toml
.streamlit/: config.toml  secrets-example.toml
data/: sample_policies.json  sample_products.json
data/seed_data/: clothing.json  electronics.json  home_goods.json
mcp_schemas/: responses.json  tools.json
src/claudecart/backend/: __init__.py  claude_controller.py
src/claudecart/database/: sqlite_manager.py  vector_manager.py
src/claudecart/mcp_tools/: inventory_tools.py  search_tools.py  tool_registry.py
src/claudecart/utils/: firecrawl_scraper.py  tavliy_client.py
